# opengl_shader_tests

./: .gitignore  CMakeLists.txt  Makefile.am  configure.ac  instructions  tutorial_url
include/glad/: glad.h
shaders/: lightning.frag  lightning.vert  lightning_lamp.frag  texture.frag
src/: CMakeLists.txt  camera.hpp  glad.c  lighting.cpp  main.c  main.cpp  shader.cpp  shader.hpp  texture.cpp
src/glad/: glad.h
src/managers/: FileSystem.cpp  FileSystem.hpp  TextureLoader.hpp
test/: CMakeLists.txt  test.cpp
